--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "cypress": "^3.4.1",
     "jscs": "^3.0.7",
     "jsdoc": "^3.5.5",
@@ -33,6 +35,7 @@
     "npm-run-all": "^4.1.5",
     "rollup": "^1.16.7",
     "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-filesize": "^6.1.0",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-terser": "^4.0.4",
